--- a/frontend/src/app/components/empresas/empresas.component.html
+++ b/frontend/src/app/components/empresas/empresas.component.html
@@ -20,7 +20,7 @@
         </button>
         <button mat-raised-button color="accent" (click)="crearRutaGeneral()" class="action-button">
             <mat-icon>route</mat-icon>
-            CREAR RUTA
+            IR A MÓDULO RUTAS
         </button>
         <button mat-button color="accent" (click)="dashboardEmpresas()" class="action-button">
             <mat-icon>dashboard</mat-icon>
@@ -410,11 +410,11 @@
                     </th>
                     <td mat-cell *matCellDef="let empresa" class="table-cell">
                         <div class="cell-content">
-                            <mat-chip-set>
+                            <button mat-chip-set>
                                 <mat-chip color="warn" selected>{{ empresa.rutasAutorizadasIds?.length || 0 }}</mat-chip>
                             </mat-chip-set>
                             <button mat-icon-button size="small" (click)="verRutasEmpresa(empresa)"
-                                matTooltip="VER RUTAS DE LA EMPRESA" class="ruta-button">
+                                matTooltip="VER RUTAS EN MÓDULO OPTIMIZADO" class="ruta-button">
                                 <mat-icon>route</mat-icon>
                             </button>
                         </div>
@@ -511,7 +511,7 @@
                                 </button>
                                 <button mat-menu-item (click)="crearRuta(empresa)">
                                     <mat-icon>route</mat-icon>
-                                    <span>CREAR RUTA</span>
+                                    <span>IR A CREAR RUTA</span>
                                 </button>
                                 <mat-divider></mat-divider>
                                 <button mat-menu-item color="warn" (click)="eliminarEmpresa(empresa.id)">
